--- a/Sites/History.HTML
+++ b/Sites/History.HTML
@@ -9,32 +9,47 @@
 </head>
 
 <body>
-    <div class="sidebar" style="width:130px">
-        <ul>
-            <li><a href="HTML-Website.html" class="nav">E-Sports</a></li>
-            <li><a href="Games.HTML">Games</a></li>
-            <li><a href="History.HTML">History</a></li>
-            <li><a href="Legends.HTML">Legends</a></li>
-            <li><a href="Players.HTML">Players</a></li>
-            <li><a href="Plays.HTML">Plays</a></li>
-            <li><a href="Tournements.HTML">Tournements</a></li>
-            <li><a href="Similarities.HTML">Similarities</a></li>
-        </ul>
-    </div>
-
-    <h1 style="text-align: center"> History of E-sports </h1>
-
+        <div class="sidebar bar-block" style="width:130px">
+                <ul>
+                    <li><a href="HTML-Website.html" class="nav">E-Sports</a></li>
+                    <li><a href="Games.HTML">Games</a></li>
+                    <li><a href="History.HTML">History</a></li>
+                    <li><a href="Legends.HTML">Legends</a></li>
+                    <li><a href="Players.HTML">Players</a></li>
+                    <li><a href="Plays.HTML">Plays</a></li>
+                    <li><a href="Tournements.HTML">Tournements</a></li>
+                    <li><a href="Similarities.HTML">Similarities</a></li>
+                 </ul>
+              </div>w
+              <h1 style="text-align: center"> History of E-sports </h1>
     <section>
         <article style="text-align: center">
-            this page will tell us how E-sports were inventent and how they became a thing.
+            E-Sports History
         </article>
     </section>    
-
     <section style="text-align: center">
         <h3> At the start </h3>
         <article>
-            there was a explosion
-        </article>
+            First Esports Tournament
+        </article>    
+        <p>
+            The first eSports event happened all the way back in the October of 1972 at Stamford University where students competed on the video game Spacewar. The grand prize for the winner was a year long subscription to the Rolling Stones magazine. However, it wasn’t until 1980 whereby the first video game competition was held. The Space Invaders Championship had a great attendance of 10,000 participants and received widespread media attention since Space Invaders (the game of the tournament) was a household name at that point of time.
+        </p>
+        <h3>1980s</h3>
+        <p>
+            As the 1980s wore on, it would see the rise of several companies that recorded video game high scores. One such company was Twin Galaxies who promoted video games and publicized high scores and records on publications such as the Guinness Book of World Records.
+        </p>
+        <h3>1990s</h3>
+        <p>
+            When 1990s came around, it saw the rise of the now indispensable internet and the world wide web. The internet did for gaming what it did for instant messaging, it connected gamers through the web so that now online competitive gaming was made possible. Internet connectivity also gave rise to the growth in popularity of PC games and companies such as Nintendo and Blockbuster began sponsoring video game world championships around this time.
+            In 1997, the Red Annihilation tournament for the former famous “Quake game” was held which dew in about 2000 participants. It is widely regarded as the world’s first eSports event. The winner also got to drive off in John Cormack’s (lead developer of Quake) Ferrari as the grand prize!
+            A few weeks later the leading major gaming league, Cyberathlete Professional League (CPL), was formed and they held their first tournament later that year. The CPL was one of the more prominent of new leagues and tournaments popping up during this period. We also began to see bigger prize monies, such as the $15,000 prize money by CPL for one of their tournaments in the following year.
+        </p>
+        <h3>2017</h3>
+        <p>
+            Last year, the total esports prize money awarded out amounted to $110.6 million from a total of 3765 tournaments according to the esportsearnings.com website. The biggest prize pool from a single tournament? A whopping $24.6 million at The International 2017.
+Esports has come a long way and will continue to grow to serve the booming gaming market. Esports revenue is projected to hit 1.5 billion by 2020 and shows no sign of slowing down any time soon. Just like how people have been gathering in over-crowded stadiums to watch a handful of athletes compete at the highest level for decades now, esports has developed the same sort of demand in terms of participation and spectatorship throughout the years. Perhaps, everyone loves a bit of competition and hard-fought glory.
+        </p>
     </section>
-    
-</body>              
+</body>
+              
