--- a/Sites/Games.HTML
+++ b/Sites/Games.HTML
@@ -11,7 +11,7 @@
 <body>
         <div class="sidebar bar-block" style="width:130px">
                 <ul>
-                        <li><a href="HTML-Website.html" class="nav">E-Sports</a></li>
+                        <li><a href="Main.html" class="nav">E-Sports</a></li>
                         <li><a href="Games.HTML">Games</a></li>
                         <li><a href="History.HTML">History</a></li>
                         <li><a href="Legends.HTML">Legends</a></li>
