--- a/Sites/Legends.HTML
+++ b/Sites/Legends.HTML
@@ -11,7 +11,7 @@
 <body>
     <div class="sidebar" style="width:130px">
         <ul>
-            <li><a href="HTML-Website.html" class="nav">E-Sports</a></li>
+            <li><a href="Main.html" class="nav">E-Sports</a></li>
             <li><a href="Games.HTML">Games</a></li>
             <li><a href="History.HTML">History</a></li>
             <li><a href="Legends.HTML">Legends</a></li>
@@ -36,7 +36,12 @@
             where he got noticed for his excellent aim and gamesense. He also started playing Counter Strike Global Offensive after it came out.
             He got contracted by CompLexity as a stand-in but was signed with Cloud 9 after CompLexity was aquired by Cloud9. In the 2017 ESL One Collogne
             tournement he helped getting Cloud9 in 2nd place and in the ESL Pro League Season 4 in 2016 they finished 1st place.
+
+            Here's an interview Shroud gave to Logitech
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/8Tta9iV2lgc?start=32" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            
         </article>
+
 
         <h3> Jarosław "pashaBiceps" Jarząbkowski </h3>
         <article>
@@ -52,6 +57,7 @@
         <article>
             cs.profesional who became a streamer
         </article>
+        
 
         <h3> Jacky 'Jake' "Stewie2K" Yip </h3>
         <article>
