--- a/Sites/History.HTML
+++ b/Sites/History.HTML
@@ -11,7 +11,7 @@
 <body>
         <div class="sidebar bar-block" style="width:130px">
                 <ul>
-                    <li><a href="HTML-Website.html" class="nav">E-Sports</a></li>
+                    <li><a href="Main.html" class="nav">E-Sports</a></li>
                     <li><a href="Games.HTML">Games</a></li>
                     <li><a href="History.HTML">History</a></li>
                     <li><a href="Legends.HTML">Legends</a></li>
@@ -20,7 +20,7 @@
                     <li><a href="Tournements.HTML">Tournements</a></li>
                     <li><a href="Similarities.HTML">Similarities</a></li>
                  </ul>
-              </div>w
+              </div>
               <h1 style="text-align: center"> History of E-sports </h1>
     <section>
         <article style="text-align: center">
