Added some legends with short discribtion

--- a/Sites/Legends.HTML
+++ b/Sites/Legends.HTML
@@ -45,23 +45,38 @@
 
         <h3> Jarosław "pashaBiceps" Jarząbkowski </h3>
         <article>
-            pasha is a Polish professional Counter-Strike: Global Offensive player and former Counter-Strike 1.6 player. 
+            pasha is a Polish was professional Counter-Strike: Global Offensive player and Counter-Strike 1.6 player. He is one of the oldest players in the cs:go scene. He's already married and has a kid. He may not be the best player
+            but he is undeniable one of the funniest players. His favorite catch phrase "My friend",which he also calles his wife, is one of the reasons that he was the most entertaining players but with the carisma comes a really skilled player
+            which favorite weapons seams to be the dual barettas and some shotguns which are not the best in the game, but in his hands these are more then deadly. He already clutched some rounds with theese guns.
         </article>
 
         <h3> Hovik "KQLY" Tovmassian </h3>
         <article>
-            cs.profesional who became a streamer
+            Mostly known as KQLY Hovik Tovmassian is a player who got banned because he was assumed to be cheating, which was true by the way. But the most insane shots were not cheated at all. He was one of the first people which made the impossible true and even
+            created the mechanic "KQLY style" in which players in cs:go can easily kill enemies mid-air, which was possible but ultra hard in the game. He made it look easy and was one of the most skilled players which really changed how the game was played.
         </article>
 
         <h3> Olof "olofmeister" Kajbjer Gustafsson </h3>
         <article>
-            cs.profesional who became a streamer
+            Olofmeister was in the two most liked teams in the EU and also is one of the only players which played in more then 7 tournement finals. His aim and flicks with the AWP are legendary and he made himself a name in the Pro scene.
         </article>
         
 
-        <h3> Jacky 'Jake' "Stewie2K" Yip </h3>
+        <h3> Jacky "Stewie2K" Yip </h3>
         <article>
-            cs.profesional who became a streamer
+            One of the most successfully young players is Jake also known as Stewie2K. Not only his successfull start in the Pro scene made him a legend, more certainly his smoke plays made him a good player. These plays were hated by other players he played against
+            because he left no reaction time after he left the smoke. Once you see him going out of the smoke, then you are probably dead already.
+        </article>
+
+        <h3> Russel "Twistzz" Van Dulken </h3>
+        <article>
+            The youngest player Twistzz won his first major tournement in his 19th life year. Some call it luck but he is just an insanely good player.
+        </article>
+
+        <h3> Oleksandr "s1mple" Kostyliev </h3>
+        <article>
+            S1mple is the best player in the CS:GO scene. In the last years he got all the MVP(Most Valuable PLayer) medals and he is known to carry his team to every major. His team (NaVi) is full of good players, but he is the cherry on the top. No one has done so 
+            many plays like he did. He also made some remarkable plays just like KQLY or anyone else but at this point it would be confusing calling a playstyle or move after him because he already has done so many. 
         </article>
     </section>
     
