--- a/Sites/Tournements.HTML
+++ b/Sites/Tournements.HTML
@@ -31,9 +31,40 @@
     </section>
 
     <section style="text-align: center">
-        <h3> ESL-One Cologne  </h3>
+        <h3> ESL-One </h3>
         <article>
-            Tournements in Cologne
+            
+        </article>
+
+        <h3> Worlds </h3>
+        <article>
+            The Worlds Championship is the tournement where teams of all regions come together and compete for the title best team of the world. Just like the WM in soccer, are the worlds the most viewed event in League of Legends. The teams from the different regions play
+            for points in the other events to come into the choosing bracket of four where they will play against the other teams to come into the K.O. Phase where they play best of three. And in the finals they play a best of five. It is tradition to play silver scrapes if it
+            comes to a fifth game. The song is well known under the basic players of league and it will always be an intense fight if the song comes up when the best of the best compete for the title. Sadly tho there is no reason to play silver scrapes due to the fact that
+            one region will always dominate the ohter. But it is always a pleasure to see the teams on the big stage with a grand opening and their skills on the big screen. 
+        </article>
+
+        <h3> ESL-Pro </h3>
+        <article>
+            ESL-Pro is a minor event in CS:GO. Nontheless it's always a suprise to see how teams have progressed in their own training phase.
+        </article>
+
+        <h3> LEC </h3>
+        <article>
+            The LEC is the new tournement for the European League of Legend teams and players. It shows wich team is willing and good enough to call themselves the best of europe. The winner of the LEC is automatically in the world championship and mostly the biggest hope for the region.
+        </article>
+
+        <h3> The Major </h3>
+        <article>
+            The CS:GO majors are the  main events of the year. It has the biggest price pools and is also the most intense matches, because every team wants to be the best. The Games are best of three where the teams will ban the playable maps until they have 1 left. They will play
+            that map in a best of 30 rounds which will take a minimum of 45 min. if ther is a 15-15 situation then the team with a 2 point lead will win. The final is held in an extra arena and also with an extra opening celebration. The last game will be a best of 5 maps. The most Plays, hyped moments
+            and the most intense gun matches were torn off in these best of 5. This is the place where legends are born, and it's the place where the most tears will fall.
+        </article>
+
+        <h3> LCS </h3>
+        <article>
+            The LCS is the north amarican tournement for League of Legends teams. But unlike the LEC or LSK the LCS is probably one of the most underrated and possible biggest dissapointments for north americans duo to their bad raputation in League of Legends. Sadly these are not rumours.
+            The most of the time the LCS winners are often the last or second last chance for north american. Even tho they have a bad reputation and even if they are not the best in the world, they still give a hell of a fight before going down. 
         </article>
     </section>
 
