--- a/Sites/Similarities.HTML
+++ b/Sites/Similarities.HTML
@@ -33,7 +33,7 @@
     <section style="text-align: center">
         <h3> Price money</h3>
         <article>
-            dota 2 price pool was 34 million
+            The Price pool
         </article>
     </section>
 </body>
